--- a/Resto.Plugin.Hotel/Resto.Plugin.Hotel.csproj
+++ b/Resto.Plugin.Hotel/Resto.Plugin.Hotel.csproj
@@ -57,6 +57,12 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NewReservation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewReservation.Designer.cs">
+      <DependentUpon>NewReservation.cs</DependentUpon>
+    </Compile>
     <Compile Include="HotelMain.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -94,6 +100,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="NewReservation.resx">
+      <DependentUpon>NewReservation.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HotelMain.resx">
       <DependentUpon>HotelMain.cs</DependentUpon>
     </EmbeddedResource>
