--- a/Resto.Plugin.Hotel/Resto.Plugin.Hotel.csproj
+++ b/Resto.Plugin.Hotel/Resto.Plugin.Hotel.csproj
@@ -116,6 +116,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="dirinfo.txt" />
+    <None Include="Resources\forward32x32.png" />
     <None Include="Resources\rewind32x32.png" />
     <None Include="Resources\repeat32x32.png" />
     <None Include="Resources\fast-forward32x32.png" />
